--- a/ExtendableImageManager/ExtendableImageManager.csproj
+++ b/ExtendableImageManager/ExtendableImageManager.csproj
@@ -51,6 +51,8 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Crawler\ICrawler.cs" />
+    <Compile Include="Fetcher\IFetcher.cs" />
+    <Compile Include="Fetcher\SkkImpl\SkkFetcher.cs" />
     <Compile Include="FileStorage\HierarchyImpl\HierarchyFileStorage.cs" />
     <Compile Include="FileStorage\IFileStorage.cs" />
     <Compile Include="Persistence\FileFilter.cs" />
@@ -66,8 +68,15 @@
     <Compile Include="UI\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\TestForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\TestForm.Designer.cs">
+      <DependentUpon>TestForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Utils\RandomFileNameUtils.cs" />
     <Compile Include="Utils\ModelUtils.cs" />
+    <Compile Include="Utils\StringAnalysisUtil.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -79,6 +88,9 @@
     </Compile>
     <EmbeddedResource Include="UI\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\TestForm.resx">
+      <DependentUpon>TestForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
