--- a/ExtendableImageManager/ExtendableImageManager.csproj
+++ b/ExtendableImageManager/ExtendableImageManager.csproj
@@ -57,6 +57,12 @@
     <Compile Include="UI\TagManagementForm.Designer.cs">
       <DependentUpon>TagManagementForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\ViewerForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\ViewerForm.Designer.cs">
+      <DependentUpon>ViewerForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserException\ResourceNotInitializedException.cs" />
     <Compile Include="Fetcher\IFetcher.cs" />
     <Compile Include="Fetcher\SkkImpl\SkkFetcher.cs" />
@@ -110,6 +116,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\TestForm.resx">
       <DependentUpon>TestForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\ViewerForm.resx">
+      <DependentUpon>ViewerForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
